# agents

./: README.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: deep_research.py  email_agent.py  search_agent.py  writer_agent.py
3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/x_debate/: README.md  pyproject.toml
3_crew/x_debate/output/: decide.md  oppose.md  propose.md
3_crew/x_debate/src/x_debate/: crew.py  main.py
3_crew/x_debate/src/x_debate/config/: agents.yaml  tasks.yaml
3_crew/x_financial_researcher/: README.md  pyproject.toml
3_crew/x_financial_researcher/output/: report.md
3_crew/x_financial_researcher/src/x_financial_researcher/: crew.py  main.py
3_crew/x_financial_researcher/src/x_financial_researcher/config/: agents.yaml
3_crew/x_stock_picker/: README.md  pyproject.toml
3_crew/x_stock_picker/src/x_stock_picker/: crew.py  main.py
3_crew/x_stock_picker/src/x_stock_picker/config/: agents.yaml  tasks.yaml
3_crew_x/debate/output/: decision.md  opposition.md
3_crew_x/debate/src/debate/: crew.py  main.py
crew_3_x/coder/output/: code_and_output.txt
crew_3_x/coder/src/coder/: crew.py  main.py
crew_3_x/debate/output/: proposal.md
crew_3_x/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  unit_test_accounts.py
crew_3_x/financial_researcher/: debug_test.py  pyproject.toml  report.md
crew_3_x/stock_picker/: pyproject.toml
crew_3_x/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
crew_3_x/stock_picker/output/: decision.md  research_report.json  trending_companies.json
guides/: 11_async_python.ipynb
guides/community_contributions/: async_module.py
(+14 files in other folders)
