[project]
name = "x_debate"
version = "0.1.0"
description = "x_debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
x_debate = "x_debate.main:run"
run_crew = "x_debate.main:run"
train = "x_debate.main:train"
replay = "x_debate.main:replay"
test = "x_debate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
