[project]
name = "x_financial_researcher"
version = "0.1.0"
description = "x_financial_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
x_financial_researcher = "x_financial_researcher.main:run"
run_crew = "x_financial_researcher.main:run"
train = "x_financial_researcher.main:train"
replay = "x_financial_researcher.main:replay"
test = "x_financial_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
